# wikigrapher

./: .gitignore  Cargo.toml  README.md
config/: log4rs.yaml
src/: cli.rs  grapher.rs  lib.rs  main.rs  titlemapper.rs
