[package]
name = "wikigrapher"
version = "0.1.0"
authors = ["Rishvic Pushpakaran <rishvic@gmail.com>"]
edition = "2018"
license = "ISC"

[dependencies]
log = "0.4"
log4rs = { version = "1.0", features = ["console_appender", "file_appender"] }
clap = { version = "~2.33.3", features = ["yaml"] }
quick-xml = "0.22"
