[package]
name = "wikigrapher"
version = "0.1.0"
authors = ["Rishvic Pushpakaran <rishvic@gmail.com>"]
edition = "2018"
license = "ISC"

[dependencies]
anyhow = "1.0"
log = "0.4"
log4rs = { version = "1.0", features = ["console_appender", "file_appender"] }
clap = "~2.33.3"
quick-xml = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
